# cpp-library-project-template

./: CMakeLists.txt  ProjectHome.md
src/: CMakeLists.txt  libraryinfo.h.in.cmake
test/: CMakeLists.txt
trunk/: CMakeLists.txt  Makefile  README
trunk/src/: CMakeLists.txt
trunk/test/: CMakeLists.txt  main.cpp  sanity_check.cpp
